# rust-genetic-algorithm

./: .travis.yml  Cargo.toml  README.md
src/: algorithm.rs  individual.rs  main.rs  problem.rs
