[package]
name = "rust-genetic-algorithm"
version = "1.3.0"
authors = ["Andrew Schwartzmeyer <andrew@schwartzmeyer.com>"]
license = "AGPL"
repository = "https://github.com/andschwa/rust-genetic-algorithm"
homepage = "https://github.com/andschwa/rust-genetic-algorithm"
description = "A genetic algorithm in Rust for Schwefel's function."

[profile.dev]
opt-level = 2

[dependencies]
clap = "0.10.5"
rand = "0.4.2"
time = "0.1.39"
